# serializer version: 1
# name: test_async_get_account
  dict({
    'address_groups': list([
      dict({
        'address': dict({
          'addition': '',
          'city': 'Voorbeeldstad',
          'id': '1234AB1',
          'number': '1',
          'street': 'Teststraat',
          'sunrise': datetime.datetime(2026, 8, 29, 4, 30, tzinfo=datetime.timezone.utc),
          'sunset': datetime.datetime(2026, 8, 29, 18, 30, tzinfo=datetime.timezone.utc),
          'zipcode': '1234 AB',
        }),
        'connections': list([
          dict({
            'contracts': list([
              dict({
                'end_date': None,
                'label': 'Stroom tegen uurprijzen',
                'meta': dict({
                  'agreement_date': '2025-12-01',
                  'contract_type': 'smart',
                  'deposit_type': 'fixed',
                  'end_reason': None,
                  'expected_delivery': 3000,
                  'expected_production': 1500,
                  'external_contract_id': '00000000-0000-4000-8000-000000000005',
                  'gas_price_ceiling_contract_end_date': None,
                  'gas_price_ceiling_contract_start_date': None,
                  'monthly_advanced_deposit_amount': 1000000000,
                  'original_end_date': None,
                  'proposition_reference': 'vast-voorschot-e-2025-12-kwart',
                  'show_in_contract_screen': True,
                  'start_reason': None,
                }),
                'start_date': datetime.datetime(2025, 12, 31, 23, 0, tzinfo=datetime.timezone.utc),
                'type': 'electricity',
                'uuid': '00000000-0000-4000-8000-000000000004',
              }),
            ]),
            'ean': '871000000000000001',
            'features': list([
              dict({
                'code': 'E004',
                'label': 'Verbruikshistorie',
                'start_date': '2026-01-01',
              }),
            ]),
            'market_segment': 'electricity',
            'uuid': '00000000-0000-4000-8000-000000000002',
          }),
          dict({
            'contracts': list([
              dict({
                'end_date': None,
                'label': 'Gas tegen dagprijzen',
                'meta': dict({
                  'agreement_date': '2025-12-01',
                  'contract_type': 'smart',
                  'deposit_type': 'fixed',
                  'end_reason': None,
                  'expected_delivery': 1200,
                  'expected_production': None,
                  'external_contract_id': '00000000-0000-4000-8000-000000000007',
                  'gas_price_ceiling_contract_end_date': None,
                  'gas_price_ceiling_contract_start_date': None,
                  'monthly_advanced_deposit_amount': 1500000000,
                  'original_end_date': None,
                  'proposition_reference': 'vast-voorschot-g-2024-11',
                  'show_in_contract_screen': True,
                  'start_reason': None,
                }),
                'start_date': datetime.datetime(2025, 12, 31, 23, 0, tzinfo=datetime.timezone.utc),
                'type': 'gas',
                'uuid': '00000000-0000-4000-8000-000000000006',
              }),
            ]),
            'ean': '871000000000000002',
            'features': list([
            ]),
            'market_segment': 'gas',
            'uuid': '00000000-0000-4000-8000-000000000003',
          }),
        ]),
        'is_representative': True,
        'organization_uuid': '00000000-0000-4000-8000-000000000008',
        'uuid': '00000000-0000-4000-8000-000000000002',
      }),
    ]),
    'user_account': dict({
      'email': 'user@example.com',
      'first_name': 'None',
      'full_name': 'Jane Doe',
      'initials': '',
      'is_representative': False,
      'uuid': '00000000-0000-4000-8000-000000000001',
    }),
  })
# ---
# name: test_async_get_battery_chart
  dict({
    'measurements': list([
      dict({
        'delivery': 3000,
        'production': 2500,
        'result': 5000000,
        'start': datetime.datetime(2026, 8, 31, 22, 0, tzinfo=datetime.timezone.utc),
      }),
      dict({
        'delivery': 6000,
        'production': 5000,
        'result': 10000000,
        'start': datetime.datetime(2026, 9, 1, 22, 0, tzinfo=datetime.timezone.utc),
      }),
    ]),
    'meta': dict({
      'delivery': 9000,
      'production': 7500,
    }),
    'total': 15000000,
  })
# ---
# name: test_async_get_consumer_prices
  dict({
    'chart': dict({
      'range': dict({
        'end_date': datetime.datetime(2026, 8, 30, 23, 59, 59, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
        'start_date': datetime.datetime(2026, 8, 28, 15, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
      }),
      'series': dict({
        'prices': list([
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 14, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1496060,
            }),
            'price_tax_included': dict({
              'amount': 2604541,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 13, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 15, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1544823,
            }),
            'price_tax_included': dict({
              'amount': 2653304,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 14, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 16, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1850016,
            }),
            'price_tax_included': dict({
              'amount': 2958497,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 15, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 17, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2123385,
            }),
            'price_tax_included': dict({
              'amount': 3231866,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 16, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 18, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2281199,
            }),
            'price_tax_included': dict({
              'amount': 3389680,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 17, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 896,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 19, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2335679,
            }),
            'price_tax_included': dict({
              'amount': 3444160,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 18, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 747,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 20, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2210867,
            }),
            'price_tax_included': dict({
              'amount': 3319348,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 19, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 633,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 21, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2156509,
            }),
            'price_tax_included': dict({
              'amount': 3264990,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 20, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 689,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 22, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1922253,
            }),
            'price_tax_included': dict({
              'amount': 3030734,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 21, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 712,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 28, 23, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1753819,
            }),
            'price_tax_included': dict({
              'amount': 2862300,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 22, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 729,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 0, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1551176,
            }),
            'price_tax_included': dict({
              'amount': 2659657,
            }),
            'start_date': datetime.datetime(2026, 8, 28, 23, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 781,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 1, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1409061,
            }),
            'price_tax_included': dict({
              'amount': 2517542,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 0, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 776,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 2, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1320550,
            }),
            'price_tax_included': dict({
              'amount': 2429031,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 1, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 776,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 3, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1314863,
            }),
            'price_tax_included': dict({
              'amount': 2423344,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 2, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 672,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 4, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1358635,
            }),
            'price_tax_included': dict({
              'amount': 2467116,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 3, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 675,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 5, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1380899,
            }),
            'price_tax_included': dict({
              'amount': 2489380,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 4, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 678,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 6, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1425215,
            }),
            'price_tax_included': dict({
              'amount': 2533696,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 5, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 674,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 7, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 934530,
            }),
            'price_tax_included': dict({
              'amount': 2043011,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 6, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 748,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 8, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 263010,
            }),
            'price_tax_included': dict({
              'amount': 1371491,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 7, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 993,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 9, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 201571,
            }),
            'price_tax_included': dict({
              'amount': 1310052,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 8, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 10, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 192921,
            }),
            'price_tax_included': dict({
              'amount': 1301402,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 9, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 11, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 184481,
            }),
            'price_tax_included': dict({
              'amount': 1292962,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 10, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 12, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 180760,
            }),
            'price_tax_included': dict({
              'amount': 1289241,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 11, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 13, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 193737,
            }),
            'price_tax_included': dict({
              'amount': 1302218,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 12, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 14, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 235664,
            }),
            'price_tax_included': dict({
              'amount': 1344145,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 13, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 15, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 483442,
            }),
            'price_tax_included': dict({
              'amount': 1591923,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 14, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 16, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1434290,
            }),
            'price_tax_included': dict({
              'amount': 2542771,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 15, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 17, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2031334,
            }),
            'price_tax_included': dict({
              'amount': 3139815,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 16, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 18, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2450386,
            }),
            'price_tax_included': dict({
              'amount': 3558867,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 17, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 815,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 19, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2473105,
            }),
            'price_tax_included': dict({
              'amount': 3581586,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 18, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 681,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 20, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2279566,
            }),
            'price_tax_included': dict({
              'amount': 3388047,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 19, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 612,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 21, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2118696,
            }),
            'price_tax_included': dict({
              'amount': 3227177,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 20, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 614,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 22, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1934685,
            }),
            'price_tax_included': dict({
              'amount': 3043166,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 21, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 648,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 29, 23, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1617181,
            }),
            'price_tax_included': dict({
              'amount': 2725662,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 22, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 677,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 0, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1442064,
            }),
            'price_tax_included': dict({
              'amount': 2550545,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 23, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 756,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 1, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1243382,
            }),
            'price_tax_included': dict({
              'amount': 2351863,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 0, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 780,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 2, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1125377,
            }),
            'price_tax_included': dict({
              'amount': 2233858,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 1, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 824,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 3, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1022527,
            }),
            'price_tax_included': dict({
              'amount': 2131008,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 2, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 835,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 4, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1064363,
            }),
            'price_tax_included': dict({
              'amount': 2172844,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 3, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 846,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 5, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 1064695,
            }),
            'price_tax_included': dict({
              'amount': 2173176,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 4, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 860,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 6, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 915775,
            }),
            'price_tax_included': dict({
              'amount': 2024256,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 5, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 853,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 7, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 395443,
            }),
            'price_tax_included': dict({
              'amount': 1503924,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 6, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 889,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 8, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 203296,
            }),
            'price_tax_included': dict({
              'amount': 1311777,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 7, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 9, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 198910,
            }),
            'price_tax_included': dict({
              'amount': 1307391,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 8, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 10, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 198185,
            }),
            'price_tax_included': dict({
              'amount': 1306666,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 9, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 11, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 190622,
            }),
            'price_tax_included': dict({
              'amount': 1299103,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 10, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 12, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 187415,
            }),
            'price_tax_included': dict({
              'amount': 1295896,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 11, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 13, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 187627,
            }),
            'price_tax_included': dict({
              'amount': 1296108,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 12, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 14, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 198547,
            }),
            'price_tax_included': dict({
              'amount': 1307028,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 13, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 15, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 205777,
            }),
            'price_tax_included': dict({
              'amount': 1314258,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 14, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 16, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 886251,
            }),
            'price_tax_included': dict({
              'amount': 1994732,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 15, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 1000,
            }),
            'tariff_group': 'low',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 17, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2100213,
            }),
            'price_tax_included': dict({
              'amount': 3208694,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 16, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 898,
            }),
            'tariff_group': 'normal',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 18, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2427095,
            }),
            'price_tax_included': dict({
              'amount': 3535576,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 17, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 584,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 19, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2539080,
            }),
            'price_tax_included': dict({
              'amount': 3647561,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 18, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 409,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 20, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2536055,
            }),
            'price_tax_included': dict({
              'amount': 3644536,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 19, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 314,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 21, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2396089,
            }),
            'price_tax_included': dict({
              'amount': 3504570,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 20, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 348,
            }),
            'tariff_group': 'high',
          }),
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 22, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 2233071,
            }),
            'price_tax_included': dict({
              'amount': 3341552,
            }),
            'start_date': datetime.datetime(2026, 8, 30, 21, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': dict({
              'permille': 374,
            }),
            'tariff_group': 'high',
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_async_get_consumer_prices_gas_daily
  dict({
    'chart': dict({
      'range': dict({
        'end_date': datetime.datetime(2026, 8, 30, 23, 59, 59, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
        'start_date': datetime.datetime(2026, 8, 28, 19, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
      }),
      'series': dict({
        'prices': list([
          dict({
            'end_date': datetime.datetime(2026, 8, 30, 4, 0, tzinfo=datetime.timezone.utc),
            'price_tax_excluded': dict({
              'amount': 8761816,
            }),
            'price_tax_included': dict({
              'amount': 16029802,
            }),
            'start_date': datetime.datetime(2026, 8, 29, 4, 0, tzinfo=datetime.timezone.utc),
            'sustainability_score': None,
            'tariff_group': None,
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_async_get_electricity_chart[days-get_electricity_chart_days.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
          dict({
            'delivered': 0,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 16, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
          dict({
            'delivered': 12000,
            'produced': 3000,
            'start': datetime.datetime(2026, 9, 17, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
          dict({
            'delivered': 15000,
            'produced': 1500,
            'start': datetime.datetime(2026, 9, 18, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
          dict({
            'delivered': 9000,
            'produced': 6000,
            'start': datetime.datetime(2026, 9, 19, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
          dict({
            'delivered': 8500,
            'produced': 7000,
            'start': datetime.datetime(2026, 9, 20, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
          dict({
            'delivered': 9500,
            'produced': 2500,
            'start': datetime.datetime(2026, 9, 21, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
          dict({
            'delivered': 7000,
            'produced': 5500,
            'start': datetime.datetime(2026, 9, 22, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
          dict({
            'delivered': 6000,
            'produced': 9000,
            'start': datetime.datetime(2026, 9, 23, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
          dict({
            'delivered': 0,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 25, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': 118445267,
          'delivery_costs_incl_tax': 192713500,
          'delivery_price_per_unit_excl_tax': 1767839.8,
          'delivery_price_per_unit_incl_tax': 2876320.9,
          'energy_delivered_sum': 67000,
          'energy_produced_sum': 34500,
          'has_supply_contract': True,
          'over_capacity_kwh': None,
          'production_costs_excl_tax': 47987171,
          'production_costs_incl_tax': 86229769,
          'production_price_per_unit_excl_tax': 1390932.5,
          'production_price_per_unit_incl_tax': 2499413.5999999996,
          'result_tax_excluded': 70458096,
          'result_tax_included': 106483731,
        }),
        'start': datetime.datetime(2026, 8, 31, 22, 0, tzinfo=datetime.timezone.utc),
        'totals': dict({
          'd': 67000,
          'p': 34500,
        }),
        'type': 'days',
      }),
    ]),
  })
# ---
# name: test_async_get_electricity_chart[hours-get_electricity_chart_hours.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
          dict({
            'delivered': 205,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 23, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 171,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 23, 23, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 150,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 0, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 137,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 1, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 137,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 2, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 150,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 3, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 239,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 4, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
          dict({
            'delivered': 341,
            'produced': 75,
            'start': datetime.datetime(2026, 9, 24, 5, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
          dict({
            'delivered': 273,
            'produced': 300,
            'start': datetime.datetime(2026, 9, 24, 6, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
          dict({
            'delivered': 205,
            'produced': 675,
            'start': datetime.datetime(2026, 9, 24, 7, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
          dict({
            'delivered': 137,
            'produced': 1050,
            'start': datetime.datetime(2026, 9, 24, 8, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 102,
            'produced': 1350,
            'start': datetime.datetime(2026, 9, 24, 9, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 102,
            'produced': 1500,
            'start': datetime.datetime(2026, 9, 24, 10, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 102,
            'produced': 1425,
            'start': datetime.datetime(2026, 9, 24, 11, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 136,
            'produced': 1200,
            'start': datetime.datetime(2026, 9, 24, 12, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 205,
            'produced': 825,
            'start': datetime.datetime(2026, 9, 24, 13, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 307,
            'produced': 450,
            'start': datetime.datetime(2026, 9, 24, 14, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'low',
          }),
          dict({
            'delivered': 478,
            'produced': 150,
            'start': datetime.datetime(2026, 9, 24, 15, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
          dict({
            'delivered': 546,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 16, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
          dict({
            'delivered': 512,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 17, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'high',
          }),
          dict({
            'delivered': 444,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 18, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'high',
          }),
          dict({
            'delivered': 375,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 19, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
          dict({
            'delivered': 307,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 20, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
          dict({
            'delivered': 239,
            'produced': 0,
            'start': datetime.datetime(2026, 9, 24, 21, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': 'normal',
          }),
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': 15238797,
          'delivery_costs_incl_tax': 21889682,
          'delivery_price_per_unit_excl_tax': 2539799.5,
          'delivery_price_per_unit_incl_tax': 3648280.3,
          'energy_delivered_sum': 6000,
          'energy_produced_sum': 9000,
          'has_supply_contract': True,
          'over_capacity_kwh': None,
          'production_costs_excl_tax': 14250758,
          'production_costs_incl_tax': 24227086,
          'production_price_per_unit_excl_tax': 1583417.5,
          'production_price_per_unit_incl_tax': 2691898.4999999995,
          'result_tax_excluded': 988039,
          'result_tax_included': -2337404,
        }),
        'start': datetime.datetime(2026, 9, 23, 22, 0, tzinfo=datetime.timezone.utc),
        'totals': dict({
          'd': 6000,
          'p': 9000,
        }),
        'type': 'hours',
      }),
    ]),
  })
# ---
# name: test_async_get_electricity_chart[hours-get_electricity_chart_hours_pending.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': None,
          'delivery_costs_incl_tax': None,
          'delivery_price_per_unit_excl_tax': None,
          'delivery_price_per_unit_incl_tax': None,
          'energy_delivered_sum': None,
          'energy_produced_sum': None,
          'has_supply_contract': False,
          'over_capacity_kwh': None,
          'production_costs_excl_tax': None,
          'production_costs_incl_tax': None,
          'production_price_per_unit_excl_tax': None,
          'production_price_per_unit_incl_tax': None,
          'result_tax_excluded': None,
          'result_tax_included': None,
        }),
        'start': datetime.datetime(2026, 9, 24, 22, 0, tzinfo=datetime.timezone.utc),
        'totals': dict({
          'd': 0,
          'p': 0,
        }),
        'type': 'hours',
      }),
    ]),
  })
# ---
# name: test_async_get_electricity_chart[months-get_electricity_chart_months.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
          dict({
            'delivered': 67000,
            'produced': 34500,
            'start': datetime.datetime(2026, 8, 31, 22, 0, tzinfo=datetime.timezone.utc),
            'tariff_group': None,
          }),
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': 118445267,
          'delivery_costs_incl_tax': 192713500,
          'delivery_price_per_unit_excl_tax': 1767839.8,
          'delivery_price_per_unit_incl_tax': 2876320.9,
          'energy_delivered_sum': 67000,
          'energy_produced_sum': 34500,
          'has_supply_contract': True,
          'over_capacity_kwh': None,
          'production_costs_excl_tax': 47987171,
          'production_costs_incl_tax': 86229769,
          'production_price_per_unit_excl_tax': 1390932.5,
          'production_price_per_unit_incl_tax': 2499413.5999999996,
          'result_tax_excluded': 70458096,
          'result_tax_included': 106483731,
        }),
        'start': datetime.datetime(2025, 12, 31, 23, 0, tzinfo=datetime.timezone.utc),
        'totals': dict({
          'd': 67000,
          'p': 34500,
        }),
        'type': 'months',
      }),
    ]),
  })
# ---
# name: test_async_get_electricity_delivered
  dict({
    'contracts': list([
      dict({
        'end_date': None,
        'label': 'P1-meter',
        'meta': dict({
          'dsmr_version': '5.0',
          'electricity_first_measured_at': '2024-01-01T10:00:00.000000Z',
          'electricity_last_measured_at': '2026-08-29T11:55:00.000000Z',
          'electricity_last_measured_average_value': 400,
          'electricity_last_measured_delivery_value': 450,
          'electricity_last_measured_production_at': '2026-08-28T16:00:00.000000Z',
          'electricity_last_measured_production_value': 0,
          'gas_first_measured_at': '2024-01-01T10:00:00.000000Z',
          'gas_last_measured_at': '2026-08-29T11:00:00.000000Z',
          'identifier': 'SERIAL0000005',
        }),
        'start_date': datetime.datetime(2024, 1, 1, 0, 0, tzinfo=datetime.timezone.utc),
        'type': 'p1_installation',
        'uuid': '00000000-0000-4000-8000-000000000501',
      }),
    ]),
    'measurement_groups': list([
      dict({
        'date': '2026-08-29',
        'meta': dict({
          'delivery_costs_excl_tax': 1875000,
          'delivery_costs_incl_tax': 3125000,
          'delivery_price_per_unit_excl_tax': 1500000,
          'delivery_price_per_unit_incl_tax': 2500000,
          'production_costs_excl_tax': 480000,
          'production_costs_incl_tax': 800000,
          'production_price_per_unit_excl_tax': 1500000,
          'production_price_per_unit_incl_tax': 2500000,
        }),
        'totals': dict({
          'd': 12500,
          'p': 3200,
        }),
      }),
      dict({
        'date': '2026-08-28',
        'meta': dict({
        }),
        'totals': dict({
          'd': 11800,
          'p': 2900,
        }),
      }),
      dict({
        'date': '2026-08-01',
        'meta': dict({
          'delivery_costs_excl_tax': 51300000,
          'delivery_costs_incl_tax': 85500000,
        }),
        'totals': dict({
          'd': 342000,
          'p': 89000,
        }),
      }),
      dict({
        'date': '2026-01-01',
        'meta': dict({
          'delivery_costs_excl_tax': 468000000,
          'delivery_costs_incl_tax': 780000000,
        }),
        'totals': dict({
          'd': 3120000,
          'p': 780000,
        }),
      }),
    ]),
  })
# ---
# name: test_async_get_gas
  dict({
    'contracts': list([
      dict({
        'end_date': None,
        'label': 'P1-meter',
        'meta': dict({
          'dsmr_version': '5.0',
          'electricity_first_measured_at': '2024-01-01T10:00:00.000000Z',
          'electricity_last_measured_at': '2026-08-29T11:55:00.000000Z',
          'electricity_last_measured_average_value': 400,
          'electricity_last_measured_delivery_value': 450,
          'electricity_last_measured_production_at': '2026-08-28T16:00:00.000000Z',
          'electricity_last_measured_production_value': 0,
          'gas_first_measured_at': '2024-01-01T10:00:00.000000Z',
          'gas_last_measured_at': '2026-08-29T11:00:00.000000Z',
          'identifier': 'SERIAL0000005',
        }),
        'start_date': datetime.datetime(2024, 1, 1, 0, 0, tzinfo=datetime.timezone.utc),
        'type': 'p1_installation',
        'uuid': '00000000-0000-4000-8000-000000000501',
      }),
    ]),
    'measurement_groups': list([
      dict({
        'date': '2026-08-29',
        'meta': dict({
          'delivery_costs_excl_tax': 1187500,
          'delivery_costs_incl_tax': 2187500,
        }),
        'total': 1250,
      }),
      dict({
        'date': '2026-08-28',
        'meta': dict({
        }),
        'total': 1180,
      }),
      dict({
        'date': '2026-08-01',
        'meta': dict({
          'delivery_costs_excl_tax': 32490000,
          'delivery_costs_incl_tax': 59850000,
        }),
        'total': 34200,
      }),
      dict({
        'date': '2026-01-01',
        'meta': dict({
          'delivery_costs_excl_tax': 296400000,
          'delivery_costs_incl_tax': 546000000,
        }),
        'total': 312000,
      }),
    ]),
  })
# ---
# name: test_async_get_gas_chart[days-get_gas_chart_days.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
          dict({
            'start': datetime.datetime(2026, 9, 16, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 17, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 1400,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 18, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 900,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 19, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 1300,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 20, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 1100,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 21, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 600,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 22, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 2000,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 23, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 400,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 25, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': 76250115,
          'delivery_costs_incl_tax': 132213608,
          'delivery_price_per_unit_excl_tax': 9902612.4,
          'delivery_price_per_unit_incl_tax': 17170598.5,
          'energy_delivered_sum': 7700,
          'has_supply_contract': True,
        }),
        'start': datetime.datetime(2026, 8, 31, 22, 0, tzinfo=datetime.timezone.utc),
        'total': 7700,
        'type': 'days',
      }),
    ]),
  })
# ---
# name: test_async_get_gas_chart[hours-get_gas_chart_hours.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
          dict({
            'start': datetime.datetime(2026, 9, 23, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 8,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 23, 23, 0, tzinfo=datetime.timezone.utc),
            'volume': 4,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 0, 0, tzinfo=datetime.timezone.utc),
            'volume': 4,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 1, 0, tzinfo=datetime.timezone.utc),
            'volume': 4,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 2, 0, tzinfo=datetime.timezone.utc),
            'volume': 4,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 3, 0, tzinfo=datetime.timezone.utc),
            'volume': 8,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 4, 0, tzinfo=datetime.timezone.utc),
            'volume': 33,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 5, 0, tzinfo=datetime.timezone.utc),
            'volume': 50,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 6, 0, tzinfo=datetime.timezone.utc),
            'volume': 25,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 7, 0, tzinfo=datetime.timezone.utc),
            'volume': 13,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 8, 0, tzinfo=datetime.timezone.utc),
            'volume': 8,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 9, 0, tzinfo=datetime.timezone.utc),
            'volume': 8,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 10, 0, tzinfo=datetime.timezone.utc),
            'volume': 8,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 11, 0, tzinfo=datetime.timezone.utc),
            'volume': 8,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 12, 0, tzinfo=datetime.timezone.utc),
            'volume': 8,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 13, 0, tzinfo=datetime.timezone.utc),
            'volume': 13,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 14, 0, tzinfo=datetime.timezone.utc),
            'volume': 25,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 15, 0, tzinfo=datetime.timezone.utc),
            'volume': 37,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 16, 0, tzinfo=datetime.timezone.utc),
            'volume': 41,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 17, 0, tzinfo=datetime.timezone.utc),
            'volume': 33,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 18, 0, tzinfo=datetime.timezone.utc),
            'volume': 21,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 19, 0, tzinfo=datetime.timezone.utc),
            'volume': 17,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 20, 0, tzinfo=datetime.timezone.utc),
            'volume': 12,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 24, 21, 0, tzinfo=datetime.timezone.utc),
            'volume': 8,
          }),
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': 3782650,
          'delivery_costs_incl_tax': 6689845,
          'delivery_price_per_unit_excl_tax': 9456625.899999999,
          'delivery_price_per_unit_incl_tax': 16724611.5,
          'energy_delivered_sum': 400,
          'has_supply_contract': True,
          'price': 16730553,
        }),
        'start': datetime.datetime(2026, 9, 23, 22, 0, tzinfo=datetime.timezone.utc),
        'total': 400,
        'type': 'hours',
      }),
    ]),
  })
# ---
# name: test_async_get_gas_chart[hours-get_gas_chart_hours_pending.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': None,
          'delivery_costs_incl_tax': None,
          'delivery_price_per_unit_excl_tax': None,
          'delivery_price_per_unit_incl_tax': None,
          'energy_delivered_sum': None,
          'has_supply_contract': False,
          'price': 16956098,
        }),
        'start': datetime.datetime(2026, 9, 24, 22, 0, tzinfo=datetime.timezone.utc),
        'total': 0,
        'type': 'hours',
      }),
    ]),
  })
# ---
# name: test_async_get_gas_chart[hours-get_gas_chart_hours_today.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
          dict({
            'start': datetime.datetime(2026, 9, 25, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 25, 23, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 0, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 1, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 2, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 3, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 4, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 5, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 6, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 7, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 8, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 9, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 10, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 11, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 12, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 13, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 14, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 15, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 16, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 17, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 18, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 19, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 20, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
          dict({
            'start': datetime.datetime(2026, 9, 26, 21, 0, tzinfo=datetime.timezone.utc),
            'volume': 0,
          }),
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': None,
          'delivery_costs_incl_tax': None,
          'delivery_price_per_unit_excl_tax': None,
          'delivery_price_per_unit_incl_tax': None,
          'energy_delivered_sum': None,
          'has_supply_contract': True,
          'price': 16549337,
        }),
        'start': datetime.datetime(2026, 9, 25, 22, 0, tzinfo=datetime.timezone.utc),
        'total': 0,
        'type': 'hours',
      }),
    ]),
  })
# ---
# name: test_async_get_gas_chart[months-get_gas_chart_months.json]
  dict({
    'measurement_groups': list([
      dict({
        'measurements': list([
          dict({
            'start': datetime.datetime(2026, 8, 31, 22, 0, tzinfo=datetime.timezone.utc),
            'volume': 7700,
          }),
        ]),
        'meta': dict({
          'delivery_costs_excl_tax': 76250115,
          'delivery_costs_incl_tax': 132213608,
          'delivery_price_per_unit_excl_tax': 9902612.4,
          'delivery_price_per_unit_incl_tax': 17170598.5,
          'energy_delivered_sum': 7700,
          'has_supply_contract': True,
        }),
        'start': datetime.datetime(2025, 12, 31, 23, 0, tzinfo=datetime.timezone.utc),
        'total': 7700,
        'type': 'months',
      }),
    ]),
  })
# ---
# name: test_async_get_summary
  dict({
    'electricity': 0,
    'price_per_hour': list([
      dict({
        'electricity_price': 4217229,
        'electricity_price_excl_tax': 3108748,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 25, 16, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 530,
        'tariff_group': 'high',
      }),
      dict({
        'electricity_price': 4907050,
        'electricity_price_excl_tax': 3798569,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 25, 17, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 220,
        'tariff_group': 'high',
      }),
      dict({
        'electricity_price': 4359949,
        'electricity_price_excl_tax': 3251468,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 25, 18, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 61,
        'tariff_group': 'high',
      }),
      dict({
        'electricity_price': 4021905,
        'electricity_price_excl_tax': 2913424,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 25, 19, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 22,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3807371,
        'electricity_price_excl_tax': 2698890,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 25, 20, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 25,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3450180,
        'electricity_price_excl_tax': 2341699,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 25, 21, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 31,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3689246,
        'electricity_price_excl_tax': 2580765,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 25, 22, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 35,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3542139,
        'electricity_price_excl_tax': 2433658,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 25, 23, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 52,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3439018,
        'electricity_price_excl_tax': 2330537,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 0, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 89,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3301259,
        'electricity_price_excl_tax': 2192778,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 1, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 107,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3266229,
        'electricity_price_excl_tax': 2157748,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 2, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 85,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 3265383,
        'electricity_price_excl_tax': 2156902,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 3, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 120,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 3480005,
        'electricity_price_excl_tax': 2371524,
        'gas_price': 16549336,
        'gas_price_excl_tax': 9281350,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 4, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 141,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3666649,
        'electricity_price_excl_tax': 2558168,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 5, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 135,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3631105,
        'electricity_price_excl_tax': 2522624,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 6, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 124,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3201433,
        'electricity_price_excl_tax': 2092952,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 7, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 227,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 2696895,
        'electricity_price_excl_tax': 1588414,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 8, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 472,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 2033694,
        'electricity_price_excl_tax': 925213,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 9, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 760,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1804549,
        'electricity_price_excl_tax': 696068,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 10, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1095,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1532663,
        'electricity_price_excl_tax': 424182,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 11, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1196,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1540982,
        'electricity_price_excl_tax': 432501,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 12, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1192,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 2006377,
        'electricity_price_excl_tax': 897896,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 13, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1076,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 2823461,
        'electricity_price_excl_tax': 1714980,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 14, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 990,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 3564828,
        'electricity_price_excl_tax': 2456347,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 15, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 700,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3888200,
        'electricity_price_excl_tax': 2779719,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 16, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 378,
        'tariff_group': 'high',
      }),
      dict({
        'electricity_price': 4173609,
        'electricity_price_excl_tax': 3065128,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 17, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 181,
        'tariff_group': 'high',
      }),
      dict({
        'electricity_price': 4047436,
        'electricity_price_excl_tax': 2938955,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 18, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 77,
        'tariff_group': 'high',
      }),
      dict({
        'electricity_price': 3831179,
        'electricity_price_excl_tax': 2722698,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 19, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 78,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3720130,
        'electricity_price_excl_tax': 2611649,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 20, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 94,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3559080,
        'electricity_price_excl_tax': 2450599,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 21, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 105,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3528042,
        'electricity_price_excl_tax': 2419561,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 22, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 119,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3465848,
        'electricity_price_excl_tax': 2357367,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 26, 23, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 134,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3381694,
        'electricity_price_excl_tax': 2273213,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 0, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 154,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3322313,
        'electricity_price_excl_tax': 2213832,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 1, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 174,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3263447,
        'electricity_price_excl_tax': 2154966,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 2, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 183,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3228387,
        'electricity_price_excl_tax': 2119906,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 3, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 203,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3239277,
        'electricity_price_excl_tax': 2130796,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 4, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 217,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3146378,
        'electricity_price_excl_tax': 2037897,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 5, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 232,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 2892823,
        'electricity_price_excl_tax': 1784342,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 6, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 222,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 2094495,
        'electricity_price_excl_tax': 986014,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 7, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 299,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1574044,
        'electricity_price_excl_tax': 465563,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 8, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 507,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1316920,
        'electricity_price_excl_tax': 208439,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 9, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 797,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1322849,
        'electricity_price_excl_tax': 214368,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 10, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1093,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1309961,
        'electricity_price_excl_tax': 201480,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 11, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1276,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1307966,
        'electricity_price_excl_tax': 199485,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 12, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1322,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1308420,
        'electricity_price_excl_tax': 199939,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 13, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1353,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 1467020,
        'electricity_price_excl_tax': 358539,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 14, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 1240,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 2697288,
        'electricity_price_excl_tax': 1588807,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 15, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 952,
        'tariff_group': 'low',
      }),
      dict({
        'electricity_price': 3608025,
        'electricity_price_excl_tax': 2499544,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 16, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 578,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3754374,
        'electricity_price_excl_tax': 2645893,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 17, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 338,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3742122,
        'electricity_price_excl_tax': 2633641,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 18, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 283,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3606452,
        'electricity_price_excl_tax': 2497971,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 19, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 323,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3453839,
        'electricity_price_excl_tax': 2345358,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 20, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 337,
        'tariff_group': 'normal',
      }),
      dict({
        'electricity_price': 3288857,
        'electricity_price_excl_tax': 2180376,
        'gas_price': None,
        'gas_price_excl_tax': None,
        'solar_percentage': 0,
        'solar_yield': 0,
        'start': datetime.datetime(2026, 9, 27, 21, 0, tzinfo=datetime.timezone.utc),
        'sustainability_score': 330,
        'tariff_group': 'normal',
      }),
    ]),
    'surplus_electricity': 0,
    'usage': dict({
      'measured_at': None,
      'speed': 0,
      'status_message': '',
      'status_tip': 'Probeer de piek te vermijden',
      'sustainability_score': 378,
      'type': 'high',
      'value': 0,
    }),
  })
# ---
# name: test_device_reads[battery]
  dict({
    'contracts': list([
      dict({
        'end_date': None,
        'label': 'Thuisbatterij',
        'meta': dict({
          'average_day': 4000000,
          'backup_power_active': False,
          'backup_power_capable': True,
          'backup_power_usable_capacity_wh': 4000,
          'battery_state': 'Discharging',
          'cycle_count': 100,
          'delivery_day': 3000,
          'dynamic_charging_enabled': False,
          'dynamic_load_balancing_enabled': True,
          'dynamic_load_balancing_overload_active': False,
          'first_measured_at': '2026-04-10T12:30:00.000000Z',
          'grid_congestion_active': False,
          'home_optimization_active': False,
          'home_optimization_enabled': False,
          'host_device_model_name': 'Example Battery 5',
          'identifier': 'SERIAL0000003',
          'inverter_state': 'Discharging',
          'last_measured_at': '2026-09-29T11:55:00.000000Z',
          'manual_control_enabled': False,
          'manual_control_state': None,
          'power_ac': -800,
          'production_day': 2500,
          'production_month': None,
          'reserve_discharge_cutoff_wh': 1000,
          'self_consumption_enabled': True,
          'show_in_contract_screen': True,
          'state_of_charge': 655,
          'total_day': 5000000,
          'total_earned': 1000000000,
        }),
        'start_date': datetime.datetime(2026, 4, 9, 22, 0, tzinfo=datetime.timezone.utc),
        'type': 'home_battery_installation',
        'uuid': '00000000-0000-4000-8000-000000000201',
      }),
    ]),
    'measurement_groups': list([
      dict({
        'date': datetime.datetime(2026, 9, 28, 22, 0, tzinfo=datetime.timezone.utc),
        'measurements': list([
        ]),
        'meta': dict({
        }),
        'total': 5000000,
      }),
    ]),
  })
# ---
# name: test_device_reads[battery_control_mode]
  dict({
    'control_mode': 'self_consumption',
    'modes': dict({
      'dynamic_charging': dict({
        'available': False,
        'enabled': False,
      }),
      'home_optimization': dict({
        'available': True,
        'enabled': False,
      }),
      'self_consumption': dict({
        'available': True,
        'enabled': True,
      }),
    }),
    'processing': False,
  })
# ---
# name: test_device_reads[battery_home_optimization]
  dict({
    'max_desired_charge_power_limits': dict({
      'max_watts': 2500,
      'min_watts': 100,
    }),
    'max_desired_charge_power_watts': 2500,
    'max_desired_discharge_power_limits': dict({
      'max_watts': 800,
      'min_watts': 100,
    }),
    'max_desired_discharge_power_watts': 800,
  })
# ---
# name: test_device_reads[charge_point]
  dict({
    'contracts': list([
      dict({
        'charge_schedules': list([
          dict({
            'end_time': datetime.datetime(2026, 9, 29, 14, 0, tzinfo=datetime.timezone.utc),
            'start_time': datetime.datetime(2026, 9, 29, 12, 0, tzinfo=datetime.timezone.utc),
          }),
          dict({
            'end_time': datetime.datetime(2026, 9, 30, 4, 0, tzinfo=datetime.timezone.utc),
            'start_time': datetime.datetime(2026, 9, 30, 2, 0, tzinfo=datetime.timezone.utc),
          }),
        ]),
        'end_date': None,
        'label': 'Laadpaal',
        'meta': dict({
          'charge_point_model_name': 'Example Charger 11',
          'charging_cost_total': 1500000000,
          'identifier': 'SERIAL0000004',
          'serial_number': 'SERIAL0000004',
          'session_average_cost_in_cents': 2500000,
          'session_charging_cost_total': 25000000,
          'session_flex_result': 2000000,
          'show_in_contract_screen': True,
        }),
        'start_date': datetime.datetime(2023, 10, 8, 22, 0, tzinfo=datetime.timezone.utc),
        'state': dict({
          'can_charge': True,
          'can_schedule': True,
          'charge_on_solar_enabled': False,
          'charge_point_session': dict({
            'charged_distance_in_kilometers': 60,
            'start_time': datetime.datetime(2026, 9, 29, 10, 0, tzinfo=datetime.timezone.utc),
          }),
          'charging_automatically': True,
          'charging_manually': False,
          'connectivity_state': True,
          'dynamic_charging_enabled': True,
          'dynamic_charging_flex_enabled': True,
          'dynamic_charging_flex_suppressed': False,
          'dynamic_charging_user_constraints': dict({
            'desired_additional_battery_percentage': None,
            'desired_distance_in_kilometers': 150,
            'desired_end_time': datetime.datetime(2026, 9, 30, 5, 0, tzinfo=datetime.timezone.utc),
          }),
          'dynamic_load_balancing_health': 'HEALTHY',
          'energy_delivered_session': 10000,
          'overload_protection_active': False,
          'plug_and_charge': False,
          'power_actual': 11000,
          'processing': False,
          'start_mode': 'Automatic',
          'state': 'Charging',
        }),
        'type': 'charge_point_installation',
        'uuid': '00000000-0000-4000-8000-000000000301',
      }),
    ]),
    'vehicles': list([
      dict({
        'battery_capacity_useable_wh': 60000,
        'consumption_wh_per_km': 160,
        'label': 'Example Car',
        'uuid': '00000000-0000-4000-8000-000000000401',
      }),
    ]),
  })
# ---
# name: test_device_reads[pv_installation]
  dict({
    'contracts': list([
      dict({
        'end_date': None,
        'label': 'Zonnepanelen',
        'meta': dict({
          'dynamic_control_enabled': True,
          'first_measured_at': '2025-04-01T08:00:00.000000Z',
          'identifier': 'SERIAL0000001',
          'installation_wp': 3600,
          'inverter_firmware_version': '1.2.3',
          'inverter_model_name': 'Example Inverter 3000',
          'last_measured_at': '2026-09-29T11:55:00.000000Z',
          'last_measured_power_value': 1500,
          'module_firmware_version': '4.5.6',
          'panel_count': 9,
          'panel_wp': 400,
          'power_limit_active': False,
          'show_in_contract_screen': True,
          'total_day': 1500000,
          'total_earned': 250000000,
          'total_power_measured': 4200000,
        }),
        'start_date': datetime.datetime(2025, 3, 31, 22, 0, tzinfo=datetime.timezone.utc),
        'type': 'pv_installation',
        'uuid': '00000000-0000-4000-8000-000000000101',
      }),
      dict({
        'end_date': None,
        'label': 'Zonnepanelen',
        'meta': dict({
          'dynamic_control_enabled': False,
          'first_measured_at': '2025-04-01T08:00:00.000000Z',
          'identifier': 'SERIAL0000002',
          'installation_wp': 2400,
          'inverter_model_name': 'Example Inverter 2000',
          'last_measured_at': '2026-09-29T11:55:00.000000Z',
          'last_measured_power_value': 1000,
          'panel_count': 6,
          'panel_wp': 400,
          'power_limit_active': False,
          'show_in_contract_screen': True,
          'total_day': None,
          'total_earned': None,
          'total_power_measured': 2800000,
        }),
        'start_date': datetime.datetime(2025, 3, 31, 22, 0, tzinfo=datetime.timezone.utc),
        'type': 'pv_installation',
        'uuid': '00000000-0000-4000-8000-000000000102',
      }),
    ]),
    'measurement_groups': list([
      dict({
        'date': datetime.datetime(2026, 9, 28, 22, 0, tzinfo=datetime.timezone.utc),
        'measurements': list([
          dict({
            'measured_at': datetime.datetime(2026, 9, 29, 11, 45, tzinfo=datetime.timezone.utc),
            'meta': dict({
            }),
            'value': 2400,
          }),
          dict({
            'measured_at': datetime.datetime(2026, 9, 29, 11, 50, tzinfo=datetime.timezone.utc),
            'meta': dict({
            }),
            'value': 2450,
          }),
          dict({
            'measured_at': datetime.datetime(2026, 9, 29, 11, 55, tzinfo=datetime.timezone.utc),
            'meta': dict({
            }),
            'value': 2500,
          }),
        ]),
        'meta': dict({
        }),
        'total': 6000,
      }),
    ]),
  })
# ---
